--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,7 @@ footer {
     width: 100%;
 }
 
+form>div {
+    margin: 5px;
+}
+
